<?xml version="1.0" encoding="utf-8"?>
<!--
 *  Paintroid: An image manipulation application for Android.
 *  Copyright (C) 2010-2013 The Catrobat Team
 *  (<http://developer.catrobat.org/credits>)
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU Affero General Public License as
 *  published by the Free Software Foundation, either version 3 of the
 *  License, or (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 *  GNU Affero General Public License for more details.
 *
 *  You should have received a copy of the GNU Affero General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linearlayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/stroke_width_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="24dip"
        android:layout_marginRight="16dp"
        android:layout_marginTop="28dp"
        android:text="@string/dialog_brush_width_text"
        android:textAllCaps="true"
        android:textColor="@color/dialog_subtitle"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/dialog_subtitle_border" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="5"
        android:orientation="horizontal" >

        <SeekBar
            android:id="@+id/stroke_width_seek_bar"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:layout_marginBottom="5dip"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:max="100"
            android:minHeight="30dip" />

        <TextView
            android:id="@+id/stroke_width_width_text"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="4"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:textColor="@color/holo_blue_bright"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/stroke_width_shape_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="24dip"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/dialog_shape_text"
        android:textAllCaps="true"
        android:textColor="@color/dialog_subtitle"
        android:textStyle="bold" />

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/dialog_subtitle_border" />

    <RadioGroup
        android:id="@+id/stroke_rbtn"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/stroke_rbtn_rect"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="5dp" />

        <ImageButton
            android:id="@+id/stroke_ibtn_rect"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginRight="20dp"
            android:background="@color/transparent"
            android:minHeight="32dip"
            android:minWidth="32dip"
            android:src="@drawable/square" />

        <RadioButton
            android:id="@+id/stroke_rbtn_circle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="5dp"
            android:checked="true" />

        <ImageButton
            android:id="@+id/stroke_ibtn_circle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@color/transparent"
            android:minHeight="32dip"
            android:minWidth="32dip"
            android:src="@drawable/circle" />
    </RadioGroup>

</LinearLayout>