...

    <TextView
        android:id="@+id/fill_tool_dialog_color_tolerance_input_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:labelFor="@+id/fill_tool_dialog_color_tolerance_input"
        android:text="@string/fill_tool_dialog_color_tolerance_title"
        android:textAllCaps="true"
        android:textColor="@color/dialog_subtitle"
        android:textStyle="bold"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="24dip" />
...
