...
            android:max="100"
            android:minHeight="30dip"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="24dp" />

        <EditText
            android:id="@+id/stroke_width_width_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:inputType="number"
...
